--- a/sql/RDBMS/PostgreSQL/docker-compose.yaml
+++ b/sql/RDBMS/PostgreSQL/docker-compose.yaml
@@ -2,8 +2,7 @@ version: '3.8'
 
 services:
   postgres_db: # 其他容器可以使用 'postgres_db' 來連線
-    # 建議使用帶有版本號的 Alpine 變體以縮小體積
-    image: postgres:16.2-alpine
+    image: postgres:16.2-alpine # 建議使用帶有版本號的 Alpine 變體以縮小體積
     container_name: postgres_sql
     ports:
       - "5432:5432"
@@ -35,7 +34,6 @@ services:
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     restart: unless-stopped
-
 
 volumes:
   postgres_data:
