--- a/sql/RDBMS/SQL Server/docker-compose.yaml
+++ b/sql/RDBMS/SQL Server/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - .env
     environment:
       - ACCEPT_EULA=Y # 接受 SQL Server 的授權條款
-      - SA_PASSWORD=${SQLSERVER_SA_PASSWORD} # 從 .env 檔案讀取密碼
+      - SA_PASSWORD=${SQLSERVER_SA_PASSWORD}
     volumes:
       - docker_data:/var/opt/mssql
     restart: unless-stopped
