--- a/sql/RDBMS/SQL Server/docker-compose.yaml
+++ b/sql/RDBMS/SQL Server/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   sql_server:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: ms_sql_server
+    container_name: ms_sql_server_container
     ports:
       - "1434:1433"
     env_file:
