--- a/sql/RDBMS/PostgreSQL/docker-compose.yaml
+++ b/sql/RDBMS/PostgreSQL/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  postgres_db: # 其他容器可以使用 'postgres_db' 來連線
+  postgres_db:
     image: postgres:16.2-alpine # 建議使用帶有版本號的 Alpine 變體以縮小體積
     container_name: postgres_sql_container
     ports:
@@ -10,9 +10,9 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
 
     volumes:
       - postgres_data:/var/lib/postgresql/data
@@ -30,8 +30,8 @@ services:
     env_file:
       - .env
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
 
     volumes:
       - pgadmin_data:/var/lib/pgadmin
