--- a/sql/NoSQL/MongoDB/.env
+++ b/sql/NoSQL/MongoDB/.env
@@ -1,2 +1,6 @@
 MONGO_INITDB_ROOT_USERNAME=mongo_admin # 使用者名稱
 MONGO_INITDB_ROOT_PASSWORD=mongo_password # 使用者密碼
+ME_CONFIG_MONGODB_SERVER=mongodb # 連線的主機名稱 (使用 Docker 服務名稱)
+ME_CONFIG_MONGODB_ENABLE_ADMIN='true' # 啟用管理者功能
+ME_CONFIG_BASICAUTH_USERNAME=admin # Mongo Express 登入使用者名稱
+ME_CONFIG_BASICAUTH_PASSWORD=expresspass # Mongo Express 登入密碼
