--- a/sql/NoSQL/Apache Jena/docker-compose.yaml
+++ b/sql/NoSQL/Apache Jena/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   fuseki:
-    image: stain/jena-fuseki
+    image: stain/jena-fuseki:4.0.0
     container_name: jena_fuseki_container
     ports:
       - "3033:3030"
